feat: release v0.8 conversations and qualifier audits
